static/styles/zulip.scss
/* ... */
#tab_list li.root a {
    color: hsl(0, 0%, 52%);
    padding-right: 2px;
}

#tab_list .root a:hover {
    color: hsl(0, 0%, 0%);
}

#tab_bar_underpadding {
    position: absolute;
    width: 100%;
    top: 40px;
    height: 10px;
    z-index: 99;
}

#navbar-buttons {
    white-space: nowrap;
    margin-left: 15px;
    margin-top: 7px;
    display: inline-block;
    float: right;
}

#navbar-buttons ul.nav {
    margin: 0px;
}

#streamlist-toggle {
    display: none;
    position: absolute;
    top: 0px;
    left: 0px;
    text-align: center;
    vertical-align: middle;
    border-right: 2px solid hsl(204, 20%, 74%);
}

#streamlist-toggle-button {
    text-decoration: none;
    color: hsl(0, 0%, 52%);
    display: block;
    position: relative;
    background-color: hsl(0, 0%, 89%);
    width: 40px;
    height: 19px;
    padding-top: 12px;
    padding-bottom: 9px;
}

#streamlist-toggle-unreadcount,
#userlist-toggle-unreadcount {
    position: absolute;
    display: none;
    height: 12px;
    min-width: 12px;
    line-height: 12px;
    background: hsl(0, 100%, 20%);
    top: 4px;
    right: 4px;
    border: 1px solid hsl(0, 0%, 93%);
    box-shadow: 0px 0px 1px hsla(0, 0%, 0%, 0.2);
    border-radius: 12px;
    padding: 1px 1px 1px 1px;
    font-size: 9px;
    z-index: 15;
    font-weight: normal;
    color: hsl(0, 0%, 100%);
}

.nav .dropdown-menu {
    left: auto;
    right: 0px;
    top: 30px;
    min-width: 180px;
    -webkit-box-shadow: 0px 0px 5px hsla(0, 0%, 0%, 0.2);
    -moz-box-shadow: 0px 0px 5px hsla(0, 0%, 0%, 0.2);
    box-shadow: 0px 0px 5px hsla(0, 0%, 0%, 0.2);
}

.nav .dropdown-menu a,
.typeahead.dropdown-menu a {
    color: inherit;
}

.typeahead.dropdown-menu .active {
    color: #fff;
}

.typeahead.dropdown-menu .unsubscribed_icon {
    display: none;
}

.typeahead.dropdown-menu .active .unsubscribed_icon {
    display: block;
    float: right;
    margin-top: 5px;
    margin-right: -12px;
    font-size: 0.8em;
    color: hsl(96, 7%, 73%);
}

.typeahead-image {
    display: inline-block;
    height: 21px;
    width: 21px;
    position: relative;
    margin-top: -7px;
    vertical-align: middle;
    top: 2px;
    right: 8px;
    border-radius: 4px;

    /* For FontAwesome icons used in place of images for some users. */
    font-size: 19px;
    text-align: center;
}

.typeahead-image.icon {
    /* This aligns the icon vertically. */
    top: 0px;
}

.nav .dropdown-menu:after {
    position: absolute;
    width: 0px;
    height: 0px;
    top: -7px;
    right: 10px;
    display: inline-block;
    border-right: 7px solid transparent;
    border-bottom: 7px solid hsl(0, 0%, 66%);
    border-left: 7px solid transparent;
    content: '';
    z-index: 10;
}

#navbar-buttons ul.nav {
    .dropdown-toggle,
    li.active .dropdown-toggle {
        font-size: 20px;
        color: inherit;
        opacity: 0.5;
        text-shadow: none;
        padding-left: 0px !important;
        background-color: inherit;
        box-shadow: inherit;
        -webkit-box-shadow: inherit;
        -moz-box-shadow: inherit;
        display: block;
        position: absolute;
        right: 0px;
        top: 3px;
    }

    .dropdown-toggle,
    li.active .dropdown-toggle:hover {
        opacity: 1;
    }

    li.dropdown.open .dropdown-toggle {
        background: none;
        opacity: 1;
        text-shadow: none;
    }
}

#searchbox .input-append {
    position: relative;
    width: calc(100% - 5px);
    float: right;
}

nav .column-left {
    text-align: center;
}

nav a.no-style:hover {
    text-decoration: none;
    cursor: pointer;
}

nav .column-left .nav-logo {
    display: inline-block;
    vertical-align: top;
    margin-top: 8px;
    width: 25px;
    height: 25px;

}

nav .column-left .company-name {
    display: inline-block;
    vertical-align: top;
    text-transform: uppercase;
    margin-top: 12px;
    margin-left: 8px;
    font-size: 1.2rem;
    font-weight: 600;
    color: hsl(170, 47%, 54%);
    letter-spacing: 0.1em;
    cursor: pointer;
}

nav a .no-style {
    text-decoration: none;
}

.navbar-search {
    margin-top: 0px;
    width: auto;
    float: none;
    overflow: hidden;
    border-right: 1px solid hsl(0, 0%, 87.8%);
    height: 40px;
}

.modal-bg {
    background: #f9f9f9;
}

#search_query {
    width: 100%;
    font-size: 16px;
    height: 40px;
    padding: 0px;
    padding-left: 5px;
    padding-right: 20px;
    border: none;
    border-radius: 0px;
    font-family: 'Source Sans Pro';
    font-weight: 300;
    line-height: 40px;
}

#searchbox .search_button,
#searchbox .search_button[disabled]:hover {
    position: absolute;
    right: 2px;
    top: 6px;
    background: none;
    border-radius: 0px;
    border: none;
    height: 30px;
    text-align: center;
    padding: 4px;
    color: hsl(0, 0%, 80%);
    font-size: 18px;
    box-shadow: none;
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    text-shadow: none;
    z-index: 5;
}

#searchbox .search_button:hover {
    color: hsl(0, 0%, 0%);
}

#searchbox .search_button[disabled] {
    visibility: hidden;
}

#searchbox a.search_icon {
    color: hsl(0, 0%, 80%);
    text-decoration: none;
    padding: 10px;
    font-size: 20px;
    border-right: 1px solid #e0e0e0;
    border-left: 1px solid #e0e0e0;
    z-index: 5;
    float: left;
}

#searchbox a.search_icon:hover {
    color: hsl(0, 0%, 0%);
    text-decoration: none;
}

.highlight {
    background-color: hsl(51, 94%, 74%);
}

.highlight_text_inserted {
    color: hsl(122, 72%, 30%);
    background-color: hsl(120, 64%, 95%);
}

.highlight_text_deleted {
    color: hsl(0, 0%, 73%);
    text-decoration: line-through;
    background-color: hsl(7, 90%, 92%);
}

#search_arrows {
    font-size: 90%;
    letter-spacing: normal;
    border: none;

    .pill {
        padding: 2px 18px 2px 3px;
        font-size: 14px;
        bottom: 2px;

        .exit {
            top: 3px; // pill's top padding + border
        }
    }
}
/* ... */

